Version 3.0.0 (28 Apr 2006)

  This is the first release which allows to create new and modify existing
  .gig files. Beside that it also includes another bunch of bug fixes and
  Gigasampler v3 support improvements.