@@ -2,7 +2,7 @@ This package was debianized by Christian Schoenebeck <cuse@users.sourceforge.net
 Tue,  6 Jul 2004 23:12:46 +0200.
 
 You can get the latest sources of libgig from
-http://stud.fh-heilbronn.de/~cschoene/projects/libgig/
+http://stud.hs-heilbronn.de/~cschoene/projects/libgig/
 
 Upstream Author: Christian Schoenebeck <cuse@users.sourceforge.net>
 
