@@ -1,3 +1,11 @@
+Version ? (?)
+
+  libgig's home has moved (slightly) from
+  http://stud.fh-heilbronn.de/~cschoene/projects/libgig/ to
+  http://stud.hs-heilbronn.de/~cschoene/projects/libgig/, please update your
+  links and bookmarks! This is due to the recent renaming of the University
+  of Heilbronn, which kindly hosts this and other projects.
+
 Version 3.0.0 (28 Apr 2006)
 
   This is the first release which allows to create new and modify existing
